fix layer 3 tip / rule collapse resp

--- a/static/layer-3.css
+++ b/static/layer-3.css
@@ -232,14 +232,6 @@ font-size: 1.3rem;
 
     }
 
-
-.layer-3-container .l3t .variant-extra-info:nth-child(3) {
-position: absolute;
-bottom: 0;
-padding: 25px;
-}
-
-
 }
 
 
